--- a/angular-app/src/app/new-project-view/new-project-view.component.html
+++ b/angular-app/src/app/new-project-view/new-project-view.component.html
@@ -1,7 +1,7 @@
 
 
-<app-new-project-description (show)='setToggle($event)' *ngIf='toggle === 0'></app-new-project-description >
+<app-new-project-description  *ngIf='this.newprojectservice.Toggle === 0'></app-new-project-description >
 
-<app-new-project-groups (show)='setToggle($event)' *ngIf='toggle === 1'> </app-new-project-groups>
+<app-new-project-groups  *ngIf='this.newprojectservice.Toggle === 1'> </app-new-project-groups>
     
-<app-new-project-overview (show)='setToggle($event)' *ngIf='toggle === 2'> </app-new-project-overview>
+<app-new-project-overview  *ngIf='this.newprojectservice.Toggle === 2'> </app-new-project-overview>
