--- a/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.css
+++ b/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.css
@@ -1,23 +1,9 @@
-#leftBox {
-
-
-}
-
-#rightBox {
-}
-
-#rightGroup {
-}
-
-#leftGroup {
-}
 
 .vLine {
     border-left: 3px solid rgb(0, 0, 0);
-    height: 100%;
+    height: 80%;
     position: absolute;
     left: 50%;
-    /* top: 0; */
 }
 
 #confirmBttn {
@@ -32,16 +18,19 @@
 
 .buttonContainer {
     position: absolute;
-    width: 100%;
-    height: 100%;
+  /*  width: 100%;
+   /* height: 50%;*/
     align-content: center;
     left: 50%;
+    margin-top: 40%; 
+    padding-right: 15%;
 }
 
 .wrapper {
     /* margin: auto; */
+    overflow-y: hidden;
     width: 100%;
-    height: 100%;
+    height: 90%;
     text-align: center;
     align-content: center;
 }
@@ -49,7 +38,7 @@
 
 .groupContainer {
     width: 100%;
-    height: 60vh;
+    height: 40vh;
     overflow-x: hidden;
     overflow-y: auto;
     padding-left: 10%;
@@ -57,29 +46,36 @@
 
 }
 .card{
-    margin-bottom: 5px;
+   /* margin-bottom: 2px;
     /* padding-bottom: 5px;
     padding-right: 50px;
     padding-left: 50px; */
     cursor: pointer;
     background-color:rgb(60, 90, 153);
-    height: 10vh;
+    height: 13vh;
     padding-left: 5%
 
     /* white-space:nowrap; */
 }
 .content{
     width:90%;
+    height: 50vh;
     align-content: center;
     overflow: hidden;
 }
 
 .divContainer{
-    width:50%
+    width:50%;
+    /*height: 10%;*/
 }
 .divContainer#leftBox{
+    
     float: left;
 }
 .divContainer#rightBox{
     float: right;
+}
+#headRight{
+    padding-bottom: 9.5vh;
+
 }
