--- a/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
+++ b/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
@@ -32,7 +32,7 @@
 
 
     <div class="divContainer" id="rightBox">
-      <div>
+      <div id="headRight">
         <h1>Valgte grupper</h1>
         <h4>Disse grupper har du valgt</h4>
       </div>
@@ -59,7 +59,7 @@
 
     </div>
     <div class="vLine"></div>
-    <div>
+    <div class=buttonContainer>
       <input type="submit" value="Videre" id="confirmBttn" name="" (click)="showNext()" />
     </div>
   </form>
