--- a/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
+++ b/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
@@ -60,7 +60,7 @@
     </div>
     <div class="vLine"></div>
     <div>
-      <input type="submit" value="Videre" id="confirmBttn" name="" (click)="showNext()" />
+      <input type="submit" value="{{this.newprojectservice.NextButton}}" id="confirmBttn" name="" (click)="showNext()" />
     </div>
   </form>
 </div>
