--- a/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
+++ b/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
@@ -14,6 +14,6 @@
       <mat-hint align="end">{{ input.value?.length || 0 }}/250</mat-hint>
     </mat-form-field>
     <br /><br /><br />
-    <input type="submit" value="{{this.newprojectservice.NextButton}}" id="confirmBttn" name="" (click)="showNext()" />
+    <input type="submit" value="{{this.newprojectservice.NextButton}}" id="confirmBttn" name="" (click)="buttonClicked()" />
   </form>
 </div>
