--- a/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.css
+++ b/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.css
@@ -21,9 +21,8 @@
   /*  width: 100%;
    /* height: 50%;*/
     align-content: center;
-    left: 50%;
     margin-top: 40%; 
-    padding-right: 15%;
+    width: 100%;
 }
 
 .wrapper {
@@ -38,11 +37,12 @@
 
 .groupContainer {
     width: 100%;
-    height: 40vh;
+    height: 50vh;
     overflow-x: hidden;
     overflow-y: auto;
     padding-left: 10%;
     padding-right: 10%;
+    
 
 }
 .card{
