--- a/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.css
+++ b/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.css
@@ -12,11 +12,9 @@
     height: 500px;
 }
 
-#rightBox{
-    float: right;
+.rightBox{
     width:50%;
-    height: 500px;
-    text-align: center;
+   
 }
 #groupHD{
     text-align: center;
@@ -49,14 +47,32 @@
     float: right;
     width: 50%;
 }
-.cardContainer mat-card{
-    margin-bottom: 5px;
-    margin-right: 50px;
-    margin-left: 50px;
+.groupContainer {
+    width: 100%;
+    height: 50vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.card{
     cursor: pointer;
-    background-color: blue;
+    background-color:rgb(60, 90, 153);
+    height: 13vh;
+    padding-left: 5%
+}
+
+.content{
+    width:90%;
+    height: 50vh;
+    align-content: center;
+    overflow: hidden;
 }
 
 #LEFT{
     width:50%;
+}
+#chosenbois{
+    float: right;
 }
