--- a/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.html
+++ b/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.html
@@ -16,7 +16,7 @@
       <br>
       <h2 id="groupHD">Valgte Facebook grupper</h2>
       <div class="groupContainer">
-        <mat-card class="rightGroup" *ngFor="let group of this.newprojectservice.ListOfGroups; let i = index">
+        <mat-card class="rightGroup" *ngFor="let group of this.newprojectservice.ListOfSelectedGroups; let i = index">
          <span class="card">
           <div class="content">
             <div style="display: block" style="color:aliceblue">
