--- a/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.html
+++ b/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.html
@@ -31,7 +31,7 @@
     </div>
     <div id="buttonContainer">
       <form>
-        <input type="submit" value="{{this.newprojectservice.MakeProjectButton}}" id="confirmBttn" name="" />
+        <input type="submit" value="{{this.newprojectservice.MakeProjectButton}}" id="confirmBttn" name="" (click)="createProject()" />
         <input type="submit" value="redigér projektbeskrivelse" id="editBttn" name="" (click)="showNext()" />
       </form>
     </div>
