--- a/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.css
+++ b/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.css
@@ -1,6 +1,6 @@
 .vLine{
     border-left: 3px solid rgb(0, 0, 0);
-    height: 80%;
+    height: 85 %;
     position: absolute;
     left:50%;
     top:0;
@@ -9,7 +9,7 @@
     float: left;
     width: 50%;
     padding: 2%;
-    height: 500px;
+    height: 50vh;
 }
 
 .rightBox{
@@ -40,8 +40,9 @@
     align-content: center;
 }
 #wrapper{
-    height: 100%;
+    height: 90%;
     width: 100%;
+    overflow-y:hidden;
 }
 #rightGroup{
     float: right;
