--- a/angular-app/src/app/project-view/project-navigation/project-navigation.component.html
+++ b/angular-app/src/app/project-view/project-navigation/project-navigation.component.html
@@ -3,10 +3,17 @@
   <div class="container">
     <div class="projectName">{{projectName}}</div>
     <div class="icon-container">
-      <div class="icon"></div>
-      <div class="icon"></div>
-      <div class="icon"></div>
-
+      <form>
+        <div class="icon">
+          <input type="submit" value="" name="">
+        </div>
+        <div class="icon">
+          <input type="submit" value="" name="">
+        </div>
+        <div class="icon">
+          <input type="submit" value="" name="">
+        </div>
+      </form>
     </div>
     <!-- <button (click)="callUpdate()">FORCE NAME UPDATE</button> -->
   </div>
