Push before messing things up

--- a/angular-app/src/app/project-view/project-navigation/project-navigation.component.html
+++ b/angular-app/src/app/project-view/project-navigation/project-navigation.component.html
@@ -5,13 +5,13 @@
     <div class="icon-container">
       <form>
         <div class="icon">
-          <input type="submit" value="" name="">
+          <input type="submit" value="" name="" (click)='editProject(0)'>
         </div>
         <div class="icon">
-          <input type="submit" value="" name="">
+          <input type="submit" value="" name="" (click)='editProject(1)'>
         </div>
         <div class="icon">
-          <input type="submit" value="" name="">
+          <input type="submit" value="" name="" (click)='editProject(2)'>
         </div>
       </form>
     </div>
