--- a/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
+++ b/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper" *ngIf='showList'>
   <form>
 
 
@@ -64,3 +64,5 @@
     </div>
   </form>
 </div>
+
+<p *ngIf='!showList'>Henter grupper...</p>
