Can now make custom search, based on parameters
It will save, so dont spam <3

--- a/angular-app/src/app/project-view/query-view/query-view.component.html
+++ b/angular-app/src/app/project-view/query-view/query-view.component.html
@@ -1,4 +1,4 @@
-<app-project-navigation></app-project-navigation>
+<!--<app-project-navigation></app-project-navigation>-->
 <div class="query-selector-container">
     <app-query-selector class="query-selector"></app-query-selector>
 </div>
