--- a/angular-app/src/app/project-view/query-type-selection-view/query-type-selection-view.component.html
+++ b/angular-app/src/app/project-view/query-type-selection-view/query-type-selection-view.component.html
@@ -1,10 +1,20 @@
-<div class="buttoncontainer">
-  <div class="buttons">
-    <button (click)="changeView('standard')" mat-raised-button>Standard forespørgsel</button>
-    <p style="padding-top:4px">Henter alt tilgængelig data fra facebook, fra alle grupper tilhørende projekter</p>
-  </div>
-  <div class="buttons">
-    <button (click)="changeView('brugerdefineret')" mat-raised-button>Brugerdefineret forespørgsel</button>
-    <p style="padding-top:4px">Specificer din forespørgsel før data bliver hentet fra Facebook</p>
-  </div>
+<div *ngIf="!isLoading; else loading">
+
+    <app-project-navigation></app-project-navigation>
+    <div class="buttoncontainer">
+        <div class="buttons">
+            <button (click)="openDialog()" mat-raised-button>Standard forespørgsel</button>
+            <p style="padding-top:4px">Henter alt tilgængelig data fra facebook, fra alle grupper tilhørende
+                projekter</p>
+        </div>
+        <div class="buttons">
+            <button routerLink="/project_ny_soegning_brugerdef" mat-raised-button>Brugerdefineret forespørgsel</button>
+            <p style="padding-top:4px">Specificer din forespørgsel før data bliver hentet fra Facebook</p>
+        </div>
+    </div>
+
 </div>
+
+<ng-template #loading>
+    <app-loading-view customTitle="Fetching posts..... "></app-loading-view>
+</ng-template>
