Export CSV works!
Can now export a CSV containing messages!

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-navigation *ngIf="navigationservice.getNavi"></app-navigation>
-
+<div  *ngIf="navigationservice.getNavi" >
+    <app-navigation></app-navigation>
+</div>
 
 <router-outlet></router-outlet>
 
