--- a/angular-app/src/app/navigation/navigation.component.html
+++ b/angular-app/src/app/navigation/navigation.component.html
@@ -1,10 +1,11 @@
 
   <mat-toolbar color="primary" class="navigationBar">
       <button (click)="goBack()">Gå tilbage</button>
+
       <span class="example-fill-remaining-space"></span>
+      {{name}}
       <button (click)="logoutOfFacebook()">Log ud</button>
   </mat-toolbar>
 
   <div class="addMargin"></div>
-
 
