Update of query

--- a/angular-app/src/app/project-view/query-view/query-parameters/query-parameters.component.html
+++ b/angular-app/src/app/project-view/query-view/query-parameters/query-parameters.component.html
@@ -1,4 +1,4 @@
-<div *ngIf='dataReady'>
+<div>
 <p> <b>Navn:</b> {{QueryParams.name}}</p>
 <p><b>Søgeparametre:</b> <a *ngFor='let params of QueryParams.params'>#{{params}} </a></p>
 <p><b>Tidsperiode: Fra:</b> {{QueryParams.timeperiod.from}} <b>Til:</b> {{QueryParams.timeperiod.till}}</p>
