--- a/angular-app/src/app/project-view/query-view/query-menu/query-menu.component.html
+++ b/angular-app/src/app/project-view/query-view/query-menu/query-menu.component.html
@@ -4,7 +4,7 @@
 
 <div class="menuItems">
   <table class="table">
-    <tr class="clickable-row" routerLink="/project_ny_soegning">
+    <tr (click) = 'newQuery()' class="clickable-row" >
       <th>
         <div class="icon"></div>
       </th>
