--- a/angular-app/src/app/project-view/project-view.component.html
+++ b/angular-app/src/app/project-view/project-view.component.html
@@ -2,5 +2,6 @@
 <app-query-view></app-query-view>
 <app-new-query-view></app-new-query-view>
 <app-query-parameters></app-query-parameters>
+<app-query-visual-view></app-query-visual-view>
 <!-- <app-query-visual-view></app-query-visual-view> -->
 <!--<app-query-parameters></app-query-parameters>-->
