--- a/angular-app/src/app/project-view/query-view/query-view.component.html
+++ b/angular-app/src/app/project-view/query-view/query-view.component.html
@@ -1,5 +1,5 @@
 <!--<app-project-navigation></app-project-navigation>-->
-<div class="query-selector-container">
+<div class="query-selector-container" *ngIf='this.queryservice.hasQuerys'>
     <app-query-selector class="query-selector"></app-query-selector>
 </div>
 
