remove projects works

--- a/angular-app/src/app/project-view/project-navigation/project-navigation.component.html
+++ b/angular-app/src/app/project-view/project-navigation/project-navigation.component.html
@@ -1,7 +1,7 @@
 <!-- NAME -->
 <div class="navigator">
   <div class="container">
-    <div class="projectName">{{projectName}}</div>
+    <div class="projectName">{{this.directoryservice.selectedProject}}</div>
     <div class="icon-container">
       <form>
         <div class="icon">
