--- a/angular-app/src/app/home-view/project-list/project-list.component.html
+++ b/angular-app/src/app/home-view/project-list/project-list.component.html
@@ -2,9 +2,13 @@
   <mat-list-item>Ingen projekter at vise!</mat-list-item>
 </mat-list>
 <mat-nav-list *ngIf='!noProjects'>
-  <mat-list-item *ngFor="let project of projects"
-    (click)='this.newprojectservice.NewProject=false;this.directoryservice.selectedProject=project; selectProject(project.name)'>
-    <a matLine>{{project.name}}</a>
-    <p matLine> {{project.desc}}</p>
+  <mat-list-item *ngFor="let project of projects">
+
+    <div (click)='this.newprojectservice.NewProject=false;this.directoryservice.selectedProject=project;
+    selectProject(project.name)'>
+      <a matLine>{{project.name}}</a>
+      <p matLine> {{project.desc}}</p>
+    </div>
+    <button (click)="deleteProject(project.name)">Delete me</button>
   </mat-list-item>
 </mat-nav-list>
