--- a/angular-app/src/app/navigation/navigation.component.html
+++ b/angular-app/src/app/navigation/navigation.component.html
@@ -1,11 +1,14 @@
+<mat-toolbar color="primary" class="navigationBar">
+     <button mat-raised-button color="accent" (click)="goBack()">Gå tilbage</button>
 
-  <mat-toolbar color="primary" class="navigationBar">
-      <button (click)="goBack()">Gå tilbage</button>
 
-      <span class="example-fill-remaining-space"></span>
-      {{name}}
-      <button (click)="logoutOfFacebook()">Log ud</button>
-  </mat-toolbar>
+    <span class="example-fill-remaining-space"></span>
+    <div class="optOutContainter">
+        <div class="personName">{{name}}</div>
+        <button mat-raised-button color="warn" (click)="logoutOfFacebook()">Log ud</button>
+    </div>
 
-  <div class="addMargin"></div>
+</mat-toolbar>
+
+<div class="addMargin"></div>
 
