--- a/angular-app/src/app/project-view/project-navigation/project-navigation.component.css
+++ b/angular-app/src/app/project-view/project-navigation/project-navigation.component.css
@@ -2,16 +2,23 @@
     margin-right: 10px;
     height: 50px;
     width: 50px;
-    background-color: #555;
     display: table-cell;
+    padding: 3px;
+    border: solid black thin;
     border-spacing: 10px;
     /* padding-left: 20px */
+}
+.icon img{
+    height: 90%;
+    margin-top: 5%;
 }
 .projectName{
     display: table-cell;
     vertical-align: middle;
     font-size: 2rem;
+    letter-spacing: 2.5px;
     float: left;
+    line-height: initial;
     padding-right: 40px;
 }
 .container{
@@ -21,6 +28,13 @@
     margin-left: 0;
    
 }
+.projectTxt{
+    text-align: center;
+    font-size: 0.7rem;
+    letter-spacing: 1.5px;
+    padding: 0;
+    margin: 0;
+}
 
 .iconcontainer{
     display: table-cell;
@@ -29,5 +43,5 @@
 }
 .navigator{
     width: 100%;
-    background: pink;
+   border-bottom: solid thin lightgrey;
 }
