--- a/angular-app/src/app/navigation/navigation.component.css
+++ b/angular-app/src/app/navigation/navigation.component.css
@@ -23,5 +23,14 @@
 .optOutContainter{
   text-align: center;
 }
+.mainLogo{
+  width: 100%;
+  text-align: center;
+  position: absolute;
+}
+.mainLogo img{
+  height: 100%;
+  max-width: 250px;
+}
 
 
