--- a/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
+++ b/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
@@ -16,7 +16,7 @@
       <mat-hint align="end">{{ input.value?.length || 0 }}/250</mat-hint>
     </mat-form-field>
     <br /><br /><br />
-    <input type="submit" value="{{this.newprojectservice.nextButton}}" id="confirmBttn" name=""
-      (click)="buttonClicked()" />
+    <button mat-raised-button type="submit" color="accent" value="{{this.newprojectservice.nextButton}}" id="confirmBttn" name=""
+      (click)="buttonClicked()">Videre </button>
   </form>
 </div>
