--- a/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.css
+++ b/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.css
@@ -1,27 +1,20 @@
 
 .vLine {
-    border-left: 3px solid rgb(0, 0, 0);
+   /* border-left: 3px solid rgb(0, 0, 0);
     height: 80%;
     position: absolute;
-    left: 50%;
+    left: 50%;*/
 }
 
 #confirmBttn {
-    background: rgb(110, 19, 75);
-    color: white;
     height: 60px;
     width: 110px;
-    text-align: left;
-    align-content: center;
-
 }
 
 .buttonContainer {
     position: absolute;
-  /*  width: 100%;
-   /* height: 50%;*/
     align-content: center;
-    margin-top: 40%; 
+    margin-top: 30%; 
     width: 100%;
 }
 
@@ -29,7 +22,7 @@
     /* margin: auto; */
     overflow-y: hidden;
     width: 100%;
-    height: 90%;
+    height: 80%;
     text-align: center;
     align-content: center;
 }
@@ -37,29 +30,30 @@
 
 .groupContainer {
     width: 100%;
-    height: 50vh;
+    height: 40vh;
     overflow-x: hidden;
     overflow-y: auto;
-    padding-left: 10%;
-    padding-right: 10%;
-    
-
+    padding-left: 15%;
+    padding-right: 15%;
 }
 .card{
    /* margin-bottom: 2px;
-    /* padding-bottom: 5px;
-    padding-right: 50px;
-    padding-left: 50px; */
+     padding-bottom: 5px;*/
+    
     cursor: pointer;
-    background-color:rgb(60, 90, 153);
+    background-color:rgb(87, 152, 196);
     height: 13vh;
     padding-left: 5%
+    
+}
+.mat-card{
+    padding:0;
+    margin-bottom: 5%;
 
-    /* white-space:nowrap; */
 }
 .content{
     width:90%;
-    height: 50vh;
+    height: 40vh;
     align-content: center;
     overflow: hidden;
 }
@@ -75,7 +69,9 @@
 .divContainer#rightBox{
     float: right;
 }
-#headRight{
-    padding-bottom: 9.5vh;
-
+.gTitle{
+    font-style: bold;
+}
+.gDesc{
+    font-size: 10px;
 }
