--- a/angular-app/src/app/navigation/navigation.component.css
+++ b/angular-app/src/app/navigation/navigation.component.css
@@ -24,9 +24,9 @@
   text-align: center;
 }
 .mainLogo{
-  width: 100%;
+  width: 60%;
   text-align: center;
-  position: absolute;
+  /* position: absolute; */
   cursor: pointer;
 }
 .mainLogo img{
