--- a/angular-app/src/app/project-view/query-view/query-parameters/query-parameters.component.html
+++ b/angular-app/src/app/project-view/query-view/query-parameters/query-parameters.component.html
@@ -1,9 +1,18 @@
 <div>
-<p> <b>Navn:</b> {{QueryParams.name}}</p>
-<p><b>Søgeparametre:</b> <a *ngFor='let params of QueryParams.params'>#{{params}} </a></p>
-<p><b>Tidsperiode: Fra:</b> {{QueryParams.timeperiod.from}} <b>Til:</b> {{QueryParams.timeperiod.till}}</p>
-<p><b>Grupper:</b>  <a *ngFor='let groups of QueryParams.groups'> #{{groups.name}}</a></p>
-<p><b>Maks posts:</b> {{QueryParams.filter.max}}</p>
-<p><b>Tags: </b> <a *ngFor='let filter of this.QueryParams.filter.tags'>#{{filter}} </a></p>
-<p><b>Antal posts: </b>{{amountOfPosts}}</p>
+    <p> <b>Navn:</b> {{QueryParams.name}}</p>
+    <p><b>Søgeparametre:</b> <a *ngFor='let params of QueryParams.params'>#{{params}} </a></p>
+    <div *ngIf="QueryParams.timeperiod.from !=='' && QueryParams.timeperiod.till !==''">
+        <p><b>Tidsperiode: Fra:</b> {{QueryParams.timeperiod.from}} <b>Til:</b> {{QueryParams.timeperiod.till}}</p>
+    </div>
+
+    <p><b>Grupper:</b> <a *ngFor='let groups of QueryParams.groups'> #{{groups.name}}</a></p>
+    <div *ngIf="QueryParams.filter.max !== ''">
+        <p><b>Maks posts:</b> {{QueryParams.filter.max}}</p>
+    </div>
+
+    <div *ngIf="QueryParams.filter.tags">
+        <p><b>Tags: </b> <a *ngFor='let filter of this.QueryParams.filter.tags'>#{{filter}} </a></p>
+    </div>
+
+    <p><b>Antal posts: </b>{{amountOfPosts}}</p>
 </div>
